2000-06-25  Bryce McKinlay  <bryce@albatross.co.nz>
	* download.html: Update the URLs for GCC releases and snapshots.

--- a/htdocs/java/download.html
+++ b/htdocs/java/download.html
@@ -59,18 +59,19 @@ known to work. For most users we strongly suggest sticking to the
 </table>
 <br>
 
-The most current stable release is 2.95.1.  The source distribution is
-provided in two parts: the compiler, gcj, and the runtime, libgcj.
+The source distribution is provided in two parts: the compiler, gcj, and the 
+runtime, libgcj.
 <p>
 Gcj is part of the Gnu Compiler Collection, GCC.  Follow the links on
 <a
-href="http://gcc.cygnus.com/gcc-2.95/gcc-2.95.1.html">http://gcc.cygnus.com/gcc-2.95/gcc-2.95.1.html</a>
+href="http://gcc.gnu.org/releases.html">http://gcc.gnu.org/releases.html</a>
 to download the compiler.  You will need either the full distribution,
 or each of the Core Compiler, C++ and Java distributions.
 
 <p>
 
-Libgcj 2.95.1 is available from
+The most current stable release of libgcj is 2.95.1. Libgcj 2.95.1 is available 
+from
 <a href="ftp://sourceware.cygnus.com/pub/java/libgcj-2.95.1.tar.gz">
 ftp://sourceware.cygnus.com/pub/java/libgcj-2.95.1.tar.gz
 </a>
@@ -102,7 +103,7 @@ using the development sources and run into such a problem.
 <p>
 <h3>Snapshots</h3>
 GCC snapshots are made about once a week.  They are available from
-<a href="ftp://gcc.cygnus.com/pub/egcs/snapshots/index.html">ftp://gcc.cygnus.com/pub/egcs/snapshots/index.html</a>.
+<a href="http://gcc.gnu.org/snapshots.html">http://gcc.gnu.org/snapshots.html</a>.
 <p>
 Libgcj snapshots are made nightly, and are available from
 <a href="ftp://sourceware.cygnus.com/pub/java/snapshot">ftp://sourceware.cygnus.com/pub/java/snapshot</a>.
@@ -209,7 +210,7 @@ for more details on downloading and using this release.</td>
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: download.html,v 1.7 2000/04/11 19:48:25 tromey Exp $
+$Id: download.html,v 1.8 2000/04/23 05:00:31 green Exp $
 </small>
 </address>
 
