Update two links which pointed into the old FAQ.

--- a/htdocs/gcc-2.95/caveats.html
+++ b/htdocs/gcc-2.95/caveats.html
@@ -19,7 +19,8 @@
   aliasing rules and therefore may not operate correctly when compiled with
   GCC 2.95.  
 
-  Please refer to the <a href="../faq.html#linuxkernel">FAQ</a> for more
+  Please refer to the
+  <a href="http://gcc.gnu.org/fom_serv/cache/24.html">FAQ</a> for more
   information on this issue.
 
   <li>GCC 2.95 has a known bug in its handling of complex variables for
