--- a/htdocs/gcc-2.95/features.html
+++ b/htdocs/gcc-2.95/features.html
@@ -23,8 +23,8 @@
     in loops.
     <li><a href="../news/alias.html">Type based alias analysis</a> is enabled by
     default.  Note this feature will expose bugs in the Linux kernel.  Please
-    refer to the <a href="../faq.html#linuxkernel">FAQ</a> for additional
-    information on this issue.
+    refer to the <a href="http://gcc.gnu.org/fom_serv/cache/24.html">FAQ</a>
+    for additional information on this issue.
     <li>Major revamp of GIV detection, combination and simplification to
     improve loop performance.
     <li>Major improvements to register allocation and reloading.
