2000-06-27  Alexandre Petit-Bianco  <apbianco@cygnus.com>
        * done.html: New file.
        * about.html: Added link to the `Done with Gcj' page.
        * contrib.html: Likewise.
        * docs.html: Likewise.
        * download.html: Likewise.
        * faq-portugese.html: Likewise.
        * faq.html: Likewise.
        * index.html: Likewise. Added new `GCJ News' item.
        * mail.html: Added link to the `Done with Gcj' page.
        * projects.html: Likewise.
        * support.html: Likewise.
        * thanks.html: Likewise.
        * tm.html: Likewise.

(Add a `Done with gcj' section.)

--- a/htdocs/java/contrib.html
+++ b/htdocs/java/contrib.html
@@ -19,6 +19,7 @@
 <a href="docs.html">Documentation</a><br>
 <a href="download.html">Download</a><br>
 <a href="contrib.html">Contributing</a><br>
+<a href="done.html">Done with Gcj</A><br>
 <a href="http://sourceware.cygnus.com/cgi-bin/gnatsweb.pl?user=guest&password=guest&database=java&cmd=login">Bugs</a><br>
 <a href="thanks.html">Thanks</a><br>
 <!-- <a href="support.html">Support</a><br> -->
@@ -202,7 +203,7 @@ projects</a>.
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: contrib.html,v 1.3 2000/04/23 05:00:31 green Exp $
+$Id: contrib.html,v 1.4 2000/06/02 00:40:12 apbianco Exp $
 </small>
 </address>
 
