--- a/htdocs/java/faq-portugese.html
+++ b/htdocs/java/faq-portugese.html
@@ -28,6 +28,7 @@
 <br><a href="http://sourceware.cygnus.com/java/docs.html">Documentation</a>
 <br><a href="http://sourceware.cygnus.com/java/download.html">Download</a>
 <br><a href="http://sourceware.cygnus.com/java/contrib.html">Contributing</a>
+<br><a href="done.html">Done with Gcj</A>
 <br><a href="http://sourceware.cygnus.com/cgi-bin/gnatsweb.pl?user=guest&password=guest&database=java&cmd=login">Bugs</a>
 <br><a href="http://sourceware.cygnus.com/java/thanks.html">Thanks</a>
 <br><!-- <a href="support.html">Support</a><br> -->
