--- a/htdocs/java/faq.html
+++ b/htdocs/java/faq.html
@@ -22,6 +22,7 @@
                   <a href="docs.html">Documentation</a><br>
                   <a href="download.html">Download</a><br>
                   <a href="contrib.html">Contributing</a><br>
+		  <a href="done.html">Done with Gcj</A><br>
                   <a href="http://sourceware.cygnus.com/cgi-bin/gnatsweb.pl?user=guest&password=guest&database=java&cmd=login">Bugs</a><br>
                   <a href="thanks.html">Thanks</a><br>
                   <!-- <a href="support.html">Support</a><br> --> <br>
@@ -808,7 +809,7 @@ $ ../configure [...]
 </table>
 <hr>
 <address> <a href="about.html">The GCJ team</a> <br>
-<small> $Id: faq.html,v 1.24 2000/06/07 08:37:32 bryce Exp $ </small></address>
+<small> $Id: faq.html,v 1.25 2000/06/21 21:05:38 tromey Exp $ </small></address>
 <h2 align=center>&nbsp;</h2>
 
     <!--#include virtual="/include/footer-subpages.html"-->
