--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -19,6 +19,7 @@
 <a href="docs.html">Documentation</a><br>
 <a href="download.html">Download</a><br>
 <a href="contrib.html">Contributing</a><br>
+<a href="done.html">Done with Gcj</A><br>
 <a href="http://sourceware.cygnus.com/cgi-bin/gnatsweb.pl?user=guest&password=guest&database=java&cmd=login">Bugs</a><br>
 <a href="thanks.html">Thanks</a><br>
 <!-- <a href="support.html">Support</a><br> -->
@@ -69,6 +70,14 @@ i
 <br>
 
 <table>
+
+<tr><td valign="top">
+<b>June 27, 2000</b>
+</td><td>
+A new <A HREF="done.html">Done with GCJ</A> section was added.
+Send your GCJ stories <A HREF="mailto:java-discuss@sourceware.cygnus.com">
+here</A>.
+</td></tr>
 
 <tr><td valign="top">
 <b>May 19, 2000</b>
@@ -184,7 +193,7 @@ href="http://www.gnu.org/philosophy/free-sw.html">Free Software</a>.
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: index.html,v 1.41 2000/05/02 20:46:36 tromey Exp $
+$Id: index.html,v 1.42 2000/05/19 22:22:35 tromey Exp $
 </small>
 </address>
 
