--- a/htdocs/java/projects.html
+++ b/htdocs/java/projects.html
@@ -21,6 +21,7 @@
                   <a href="docs.html">Documentation</a><br>
                   <a href="download.html">Download</a><br>
                   <a href="contrib.html">Contributing</a><br>
+		  <a href="done.html">Done with Gcj</A><br>
                   <a href="http://sourceware.cygnus.com/cgi-bin/gnatsweb.pl?user=guest&password=guest&database=java&cmd=login">Bugs</a><br>
                   <a href="thanks.html">Thanks</a><br>
                   <!-- <a href="support.html">Support</a><br> --> <br>
@@ -310,7 +311,7 @@ Runtime improvements
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: projects.html,v 1.9 2000/04/29 01:45:35 tromey Exp $
+$Id: projects.html,v 1.10 2000/05/02 20:36:16 tromey Exp $
 </small>
 </address>
 
