--- a/htdocs/java/about.html
+++ b/htdocs/java/about.html
@@ -19,6 +19,7 @@
 <a href="docs.html">Documentation</a><br>
 <a href="download.html">Download</a><br>
 <a href="contrib.html">Contributing</a><br>
+<a href="done.html">Done with Gcj</A><br>
 <a href="http://sourceware.cygnus.com/cgi-bin/gnatsweb.pl?user=guest&password=guest&database=java&cmd=login">Bugs</a><br>
 <a href="thanks.html">Thanks</a><br>
 <!-- <a href="support.html">Support</a><br> -->
@@ -70,7 +71,7 @@ file</a> for web page changes.  Please help keep this up to date.
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: about.html,v 1.2 2000/03/13 17:23:06 tromey Exp $
+$Id: about.html,v 1.3 2000/04/23 05:00:31 green Exp $
 </small>
 </address>
 
