Several updates. By Joseph S. Myers <jsm28@cam.ac.uk>.

--- a/htdocs/c99status.html
+++ b/htdocs/c99status.html
@@ -142,8 +142,8 @@ N894.</p>
 </tr>
 
 <tr><td><em>new block scopes for selection and iteration statements</em></td>
-    <td></td><td></td><td></td><td></td>
-    <td>Unknown</td>
+    <td></td><td></td><td></td><td>Missing</td>
+    <td></td>
 </tr>
 
 <tr><td><em>integer constant type rules</em></td>
@@ -203,7 +203,7 @@ N894.</p>
 </tr>
 
 <tr><td><em>idempotent type qualifiers</em></td>
-    <td></td><td></td><td></td><td>Missing</td><td></td>
+    <td></td><td>Done</td><td></td><td></td><td></td>
 </tr>
 
 <tr><td><em>empty macro arguments</em></td>
@@ -269,8 +269,8 @@ N894.</p>
 </tr>
 
 <tr><td><em>return without expression not permitted in<br>function that returns a value</em></td>
-    <td></td><td></td>
-    <td></td><td>Missing</td><td></td>
+    <td></td><td>Done</td>
+    <td></td><td></td><td></td>
 </tr>
 
 <tr><th>Feature</th>
