Minor rewording. Remove note that global write priviledge is unfortunate.

--- a/htdocs/cvswrite.html
+++ b/htdocs/cvswrite.html
@@ -93,14 +93,12 @@ the appropriate policies.</p>
 
 <ul>
   <li>Global write permission.  A very limited number of developers have
-  global write permission over the entire repostiory.  This is unfortunately
-  necessary because we don't have explicit maintainers for every little
-  piece of the compiler.
+  global write permission over the entire repostiory.
 
-  <li>Localized write permission.  This is for people who own ports, front
-  ends, or significant hunks of code in the compiler.  These folks are
-  allowed to make changes in code they maintain without going through any
-  kind of approval process.
+  <li>Localized write permission.  This is for people who have primary
+  responsibility for ports, front ends, or significant hunks of code in
+  the compiler.  These folks are allowed to make changes in code they
+  maintain without going through any kind of approval process.
 
   <li>Write after approval.  This is folks that make regular contributions,
   but who do not "own" any particular piece of code.  People with write after
