* htdocs/gccmission.html: Fix grammar.

--- a/htdocs/gccmission.html
+++ b/htdocs/gccmission.html
@@ -12,7 +12,7 @@
 Project</a>, aiming to improve the compiler used in the GNU system
 including the GNU/Linux variant.
 The GCC development effort uses an open development environment and
-supports many other platforms in order to foster a world-class,
+supports many other platforms in order to foster a world-class
 optimizing compiler, to attract a larger team of developers, to ensure
 that GCC and the GNU system work on multiple architectures and diverse
 environments, and to more thoroughly test and extend the features of
@@ -63,7 +63,7 @@ GCC.</p>
 <li>Conflicts of interest exist for many GCC developers; the
     developers as well as the <a href="steering.html">GCC Steering
     Committee</a> will not allow those conflicts of interest to have an
-    effect on the GCC development.
+    effect on the development of GCC.
 </ul>
 
 </body>
