Remove another use of the word "own" with respect to parts of GCC. Change the markup from <ul> to <dl>.

--- a/htdocs/cvswrite.html
+++ b/htdocs/cvswrite.html
@@ -91,21 +91,24 @@ to the GCC master sources.  CVS doesn't provide fine grained control over
 access to the repository; therefore, we depend on each developer to follow
 the appropriate policies.</p>
 
-<ul>
-  <li>Global write permission.  A very limited number of developers have
-  global write permission over the entire repostiory.
+<dl>
+  <dt>Global write permission.</dt> <dd>A very limited number of
+  developers have global write permission over the entire
+  repostiory.</dd>
 
-  <li>Localized write permission.  This is for people who have primary
-  responsibility for ports, front ends, or significant hunks of code in
-  the compiler.  These folks are allowed to make changes in code they
-  maintain without going through any kind of approval process.
+  <dt>Localized write permission.</dt> <dd>This is for people who have
+  primary responsibility for ports, front ends, or significant hunks
+  of code in the compiler.  These folks are allowed to make changes in
+  code they maintain without going through any kind of approval
+  process.</dd>
 
-  <li>Write after approval.  This is folks that make regular contributions,
-  but who do not "own" any particular piece of code.  People with write after
-  approval need to submit their patches to the list; once the patches have
-  been approved by the appropriate maintainers the patches may be checked into
-  the GCC sources.
-</ul>
+  <dt>Write after approval.</dt> <dd>This is folks that make regular
+  contributions, but do not fall into one of the two previous
+  categories.  People with write after approval need to submit their
+  patches to the list; once the patches have been approved by the
+  appropriate maintainers the patches may be checked into the GCC
+  sources.</dd>
+</dl>
 
 <p>The list of folks with write access to the repository can be found in the
 <tt>MAINTAINERS</tt> file in the GCC distribution.</p>
