List all GCC front-ends and link the Java front-end. Simplify/merge two paragraphs.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -72,11 +72,12 @@
 
 <p>In April 1999, the egcs steering committee was appointed by the FSF
 as the official GNU maintainer for GCC.  At that time GCC was renamed
-from the "GNU C Compiler" to the "GNU Compiler Collection".
+from the "GNU C Compiler" to the "GNU Compiler Collection" and received
+a new <a href="gccmission.html">mission statement</a>.
 
-<p>As a result of those changes the project has a new
-<a href="gccmission.html">mission statement</a> which more accurately
-reflects the fundamental goals of the project.
+<p>Currently GCC contains front-ends for C, C++, Objective C, Chill,
+Fortran, and Java (<a href="http://sources.redhat.com/java/">GCJ</A>).
+</p>
 
 <p>We want to work closely with contributors to help and encourage
 them to submit their changes for inclusion in GCC.  We thus provide
