Compress paragraph on "contributing" a bit and get rid of an inaccuracy concerning assigment to the FSF.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -79,11 +79,11 @@ a new <a href="gccmission.html">mission statement</a>.
 Fortran, and Java (<a href="http://sources.redhat.com/java/">GCJ</A>).
 </p>
 
-<p>We want to work closely with contributors to help and encourage
-them to submit their changes for inclusion in GCC.  We thus provide
-access to our development sources with <a href="snapshots.html">weekly
-snapshots</a> and <a href="cvs.html">anonymous CVS</a>. All code is <a
-href="contribute.html">assigned to the FSF</a>.</p>
+<p>We want to work closely with developers to help and encourage them
+to <a href="contribute.html">contribute changes</a> for inclusion in
+GCC.  We thus provide access to our development sources with <a
+href="snapshots.html">weekly snapshots</a> and <a
+href="cvs.html">anonymous CVS</a>.</p>
 
 <p>We will provide regular, high quality
 <a href="releases.html">releases</a>.
