Update entries on integer constant type rules and integer promotion rules. By Joseph S. Myers <jsm28@cam.ac.uk>.

--- a/htdocs/c99status.html
+++ b/htdocs/c99status.html
@@ -147,11 +147,11 @@ N894.</p>
 </tr>
 
 <tr><td><em>integer constant type rules</em></td>
-    <td></td><td></td><td></td><td></td><td>Unknown</td>
+    <td></td><td></td><td></td><td>Missing</td><td></td>
 </tr>
 
 <tr><td><em>integer promotion rules</em></td>
-    <td></td><td></td><td></td><td></td><td>Unknown</td>
+    <td></td><td></td><td></td><td>Missing</td><td></td>
 </tr>
 
 <tr><td><em>vararg macros</em></td>
