--- a/htdocs/bugs/index.html
+++ b/htdocs/bugs/index.html
@@ -7,6 +7,7 @@
 <body>
 
 <p><a href="#report">Reporting Bugs</a>
+ | <a href="#manage">Managing Bugs (GNATS and the test-suite)</a>
  | <a href="#known">Frequently Reported Bugs in GCC 2.95</a>
 </p>
 
@@ -98,6 +99,33 @@ just to the person who requested it, unless explicitly told so.  If
 possible, please include in this follow-up all the information you had
 supplied in the incomplete bug report (including the preprocessor
 output), so that the new bug report is self-contained.</p>
+
+
+
+<h1><a name="manage">Managing Bugs (GNATS and the test-suite)</a></h1>
+
+<p>This section contains information mostly intended for GCC
+contributors.</p>
+
+<p>If you find a bug, but you are not fixing it (yet):</p>
+<ol>
+<li>Create a (minimal) test-case.
+<li>Add the test-case to our test-suite, marking it as XFAIL.
+<li>Add a bug report referencing the test-case to GNATS.
+</ol>
+
+<p>If you fix a bug for which there is already a GNATS entry:</p>
+<ol>
+<li>Remove the XFAIL on the test-case.
+<li>Close the bug report in GNATS.
+</ol>
+
+<p>If you find a bug, and you are fixing it right then:</p>
+<ol>
+<li>Create a (minimal) test-case.
+<li>Add the test-case to our test-suite, marking it as PASS.
+<li>Check in your fixes.
+</ol>
 
 
 <h1><a name="known">Frequently Reported Bugs in GCC 2.95</a></h1>
