--- a/htdocs/search.html
+++ b/htdocs/search.html
@@ -129,6 +129,7 @@ Mailing lists.  Ticking a box is like marking all dates for that list:
      this page is checked into CVS, which adds a level of complexity that
      is not currently handled well.  -->
 <td><select name=restrict multiple size=6>
+<option value="gcc/2000-07">Jul 2000
 <option value="gcc/2000-06">Jun 2000
 <option value="gcc/2000-05">May 2000
 <option value="gcc/2000-04">Apr 2000
@@ -165,6 +166,7 @@ Mailing lists.  Ticking a box is like marking all dates for that list:
 <option value="gcc/1997-09">Sep 1997
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="gcc-bugs/2000-07">Jul 2000
 <option value="gcc-bugs/2000-06">Jun 2000
 <option value="gcc-bugs/2000-05">May 2000
 <option value="gcc-bugs/2000-04">Apr 2000
@@ -201,6 +203,7 @@ Mailing lists.  Ticking a box is like marking all dates for that list:
 <option value="gcc-bugs/1997-09">Sep 1997
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="gcc-patches/2000-07">Jul 2000
 <option value="gcc-patches/2000-06">Jun 2000
 <option value="gcc-patches/2000-05">May 2000
 <option value="gcc-patches/2000-04">Apr 2000
@@ -229,6 +232,7 @@ Mailing lists.  Ticking a box is like marking all dates for that list:
 <option value="gcc-patches/1998-05">May 1998
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="gcc-help/2000-07">Jul 2000
 <option value="gcc-help/2000-06">Jun 2000
 <option value="gcc-help/2000-05">May 2000
 <option value="gcc-help/2000-04">Apr 2000
@@ -242,6 +246,7 @@ Mailing lists.  Ticking a box is like marking all dates for that list:
 <option value="gcc-help/1999-q3">Jul-Sep 1999
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="gcc-cvs/2000-07">Jul 2000
 <option value="gcc-cvs/2000-06">Jun 2000
 <option value="gcc-cvs/2000-05">May 2000
 <option value="gcc-cvs/2000-04">Apr 2000
@@ -270,6 +275,7 @@ Mailing lists.  Ticking a box is like marking all dates for that list:
 <option value="gcc-cvs/1998-05">May 1998
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="gcc-testresults/2000-07">Jul 2000
 <option value="gcc-testresults/2000-06">Jun 2000
 <option value="gcc-testresults/2000-05">May 2000
 <option value="gcc-testresults/2000-04">Apr 2000
