--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -15,55 +15,52 @@ if you are mirroring the GCC pages so we can note it here!
 <ul>
 <li>Australia: <a href="ftp://mirror.aarnet.edu.au/pub/egcs/">mirror.aarnet.edu.au</a>
 <li>Austria: <a href="ftp://gd.tuwien.ac.at/gnu/gcc/">gd.tuwien.ac.at</a>
-<li>Belgium (Ghent): <a href="ftp://chardonnay.elis.rug.ac.be/pub/mirrors/gcc.cygnus.com/pub/gcc/">/chardonnay.elis.rug.ac.be</a>
-<LI>Brasil: <a href="ftp://ftp.softaplic.com.br/pub/sourceware/gcc">ftp.softaplic.com.br</a>
+<li>Belgium (Ghent): <a href="ftp://chardonnay.elis.rug.ac.be/pub/mirrors/gcc.cygnus.com/pub/gcc/">chardonnay.elis.rug.ac.be</a>
+<LI>Brasil (releases only, no snapshots): <a href="ftp://ftp.softaplic.com.br/pub/sourceware/gcc/">ftp.softaplic.com.br</a>
 <LI>Brasil (releases only, no snapshots): <A HREF="ftp://ftp.unicamp.br/pub/gnu/=EXTRA=/cygnus/egcs/">ftp.unicamp.br</a>
-<li>Canada: <a href="ftp://ftp.crc.ca/pub/packages/egcs">ftp.crc.ca</a>
+<li>Canada (releases only, no snapshots): <a href="ftp://ftp.crc.ca/pub/packages/egcs/">ftp.crc.ca</a>
 <li>China (Hong Kong): <a href="ftp://ftp.foruto.com/pub/gcc.gnu.org/egcs/">ftp.foruto.com</a>
 <li>Czech Republic: <a href="ftp://sunsite.mff.cuni.cz/pub/GNU/egcs/">sunsite.mff.cuni.cz</a>
-<li>Czech Republic: <a href="ftp://ftp.gts.cz/pub/MIRRORS/ftp.cygnus.com/pub/egcs/">ftp.gts.cz</a>
-<li>Denmark: <a href="ftp://sunsite.auc.dk/pub/egcs/">sunsite.auc.dk</a> 
-<li>France: <a href="ftp://ftp.ilog.fr/pub/Mirrors/gcc/">ftp.ilog.fr</a>
-<li>France: <a href="ftp://ftp.lip6.fr/pub/egcs/">ftp.lip6.fr</a>
-<li>France (Brittany): <a href="ftp://ftp.irisa.fr/pub/mirrors/egcs">ftp.irisa.fr</a>
+<li>France (releases only, no snapshots): <a href="ftp://ftp.ilog.fr/pub/Mirrors/gcc/">ftp.ilog.fr</a>
+<li>France (releases only, no snapshots): <a href="ftp://ftp.lip6.fr/pub/egcs/">ftp.lip6.fr</a>
+<li>France (Brittany, releases only, no snapshots): <a href="ftp://ftp.irisa.fr/pub/mirrors/egcs.cygwin.com/gcc/">ftp.irisa.fr</a>
 <li>France (Versailles): <a href="ftp://ftp.uvsq.fr/pub/egcs/">ftp.uvsq.fr</a>
 <li>France: <a href="ftp://ftp.grolier.fr/pub/egcs//">ftp.grolier.fr</a>
 <LI>Germany (Berlin): <A HREF="ftp://ftp.fu-berlin.de/unix/languages/egcs/">Germany: ftp.fu-berlin.de </A>, thanks to <A HREF="mailto:leitner@math.fu-berlin.de">Felix von Leitner</A>!
 <LI>Germany: <A HREF="ftp://ftp.gwdg.de/pub/cygnus/egcs/">ftp.gwdg.de</a>
-<LI>Germany: <A HREF="ftp://ftp.uni-trier.de/pub/languages/c/implementation/egcs/">ftp.uni-trier.de</a>
+<LI>Germany (releases only, no snapshots): <A HREF="ftp://ftp.uni-trier.de/pub/languages/c/implementation/egcs/">ftp.uni-trier.de</a>
 <LI>Germany: <A HREF="ftp://ftp.mpi-sb.mpg.de/pub/gnu/mirror/egcs.cygnus.com/egcs/">ftp.mpi-sb.mpg.de</a>
 <LI>Greece: <a href="ftp://ftp.ntua.gr/pub/gnu/egcs/">ftp.ntua.gr</a>,
-<LI>Japan: <A HREF="ftp://ftp.dti.ad.jp/pub/lang/egcs">ftp.dti.ad.jp</a>, thanks to <a href="mailto:ftp-admin@dti.ad.jp">IWAIZAKO Takahiro</a>!
-<li>Japan: <a href="ftp://sysg.kek.jp/cygnus/egcs">sysg.kek.jp</a>
-<li>Japan: <a href="ftp://ftp.eos.hokudai.ac.jp/pub/egcs">ftp.eos.hokudai.ac.jp</a>
-<li>Japan: <a href="ftp://ftp.lab.kdd.co.jp/lang/egcs">ftp.lab.kdd.co.jp</a>
-<li>Japan: <a href="ftp://ftp.shonan.bunkyo.ac.jp/pub/lang/egcs">ftp.shonan.bunkyo.ac.jp</a>
-<LI>Japan: <A HREF="ftp://ftp.iij.ad.jp/pub/egcs">ftp.iij.ad.jp</a>
-<li>Japan: <a href="ftp://ring.aist.go.jp/pub/lang/egcs">ring.aist.go.jp</a>
-<li>Japan: <a href="ftp://ring.etl.go.jp/pub/lang/egcs">ring.etl.go.jp</a>
-<li>Japan: <a href="ftp://ring.crl.go.jp/pub/lang/egcs">ring.crl.go.jp</a>
+<LI>Japan: <A HREF="ftp://ftp.dti.ad.jp/pub/lang/egcs/">ftp.dti.ad.jp</a>, thanks to <a href="mailto:ftp-admin@dti.ad.jp">IWAIZAKO Takahiro</a>!
+<li>Japan: <a href="ftp://ftp.eos.hokudai.ac.jp/pub/egcs/">ftp.eos.hokudai.ac.jp</a>
+<li>Japan: <a href="ftp://ftp.lab.kdd.co.jp/lang/egcs/">ftp.lab.kdd.co.jp</a>
+<li>Japan: <a href="ftp://ftp.shonan.bunkyo.ac.jp/pub/lang/egcs/">ftp.shonan.bunkyo.ac.jp</a>
+<LI>Japan: <A HREF="ftp://ftp.iij.ad.jp/pub/egcs/">ftp.iij.ad.jp</a>
+<li>Japan: <a href="ftp://ring.aist.go.jp/pub/lang/egcs/">ring.aist.go.jp</a>
+<li>Japan: <a href="ftp://ring.etl.go.jp/pub/lang/egcs/">ring.etl.go.jp</a>
+<li>Japan: <a href="ftp://ring.crl.go.jp/pub/lang/egcs/">ring.crl.go.jp</a>
 <li>Japan: <a href="ftp://core.ring.gr.jp/pub/lang/egcs/">core.ring.gr.jp</a>
 <li>Japan: <a href="ftp://ftp.ring.gr.jp/pub/lang/egcs/">ftp.ring.gr.jp</a>
-<LI>Norway: <a href="ftp://ftp.pvv.ntnu.no/pub/egcs">ftp.pvv.ntnu.no</a>
-<LI>Poland: <A HREF="ftp://ftp.task.gda.pl/mirror/egcs.cygnus.com/pub/egcs">ftp.task.gda.pl</a>
+<LI>Norway: <a href="ftp://ftp.pvv.ntnu.no/pub/egcs/">ftp.pvv.ntnu.no</a>
+<LI>Poland: <A HREF="ftp://ftp.task.gda.pl/mirror/egcs.cygnus.com/pub/egcs/">ftp.task.gda.pl</a>
 <LI>Poland (Warsaw): <A HREF="ftp://sunsite.icm.edu.pl/pub/programming/egcs/">sunsite.icm.edu.pl</a>
-<LI>Portugal: <A HREF="ftp://ftp.lca.uevora.pt/pub/egcs">ftp.lca.uevora.pt</a>
-<LI>Romania: <A HREF="ftp://ftp.lbi.ro/mirrors/ftp.cygnus.com/pub/egcs">ftp.lbi.ro</a>, thanks to <a href="mailto:tim@lbi.ro">Surdu Bogdan</a>!
-<li>Russia: <a href="ftp://ftp.nc.orc.ru/pub/egcs">ftp.nc.orc.ru</a>
+<LI>Portugal: <A HREF="ftp://ftp.lca.uevora.pt/pub/egcs/">ftp.lca.uevora.pt</a>
+<LI>Romania: <A HREF="ftp://ftp.lbi.ro/mirrors/ftp.cygnus.com/pub/egcs/">ftp.lbi.ro</a>, thanks to <a href="mailto:tim@lbi.ro">Surdu Bogdan</a>!
+<li>Russia: <a href="ftp://ftp.nc.orc.ru/pub/egcs/">ftp.nc.orc.ru</a>
 <li>Russia: <a href="ftp://ftp.chg.ru/pub/lang/egcs/">ftp.chg.ru</a>
-<li>Russia (Moscow, no snapshots): <a href="ftp://linux.ihep.su/pub/cygnus/egcs">linux.ihep.su</a>
-<li>South Africa: <a href="ftp://ftp.sun.ac.za/sites/sourceware.cygnus.com/pub/gcc">ftp.sun.ac.za</a>
+<li>Russia (Moscow, no snapshots): <a href="ftp://linux.ihep.su/pub/cygnus/egcs/">linux.ihep.su</a>
+<li>South Africa: <a href="ftp://ftp.sun.ac.za/sites/sourceware.cygnus.com/pub/gcc/">ftp.sun.ac.za</a>
 <LI>Sweden: <A HREF="ftp://ftp.sunet.se/pub/gnu/egcs/">ftp.sunet.se</a>
 <LI>Sweden: <A HREF="ftp://ftp.lysator.liu.se/mirror/unix/egcs/">ftp.lysator.liu.se</a>
 <LI>Sweden: <A HREF="ftp://ftp.chl.chalmers.se/pub/egcs/">ftp.chl.chalmers.se</a>
 <LI>Taiwan: <a href="ftp://ftp1.sinica.edu.tw/pub3/CYGNUS/gcc/">ftp1.sinica.edu.tw</a>
 <li>Taiwan: <a href="ftp://ftp.edu.tw/computer-languages/C/gcc/">ftp.edu.tw</a>
 <li>Taiwan: <a href="ftp://ftp.nctu.edu.tw/computer-languages/C/gcc/">ftp.nctu.edu.tw</a>
-<li>Turkey (Izmir): <a href="ftp://gcc.deu.edu.tr/pub/egcs">gcc.deu.edu.tr</a>
+<li>Turkey (Izmir): <a href="ftp://gcc.deu.edu.tr/pub/egcs/">gcc.deu.edu.tr</a>
 <li>UK: <a href="ftp://unix.hensa.ac.uk/mirrors/egcs.cygnus.com/pub/egcs/">unix.hensa.ac.uk</a> 
 <li>UK: <a href="ftp://sunsite.doc.ic.ac.uk/Mirrors/egcs.cygnus.com/pub/egcs/">sunsite.doc.ic.ac.uk</a>
 <li>US (California): <a href="ftp://ftp.freesoftware.com/pub/sourceware/gcc/">ftp.freesoftware.com</a>
-<li>US (California): <a href="ftp://ftp.yggdrasil.com/mirrors/site/egcs.cygnus.com/pub/egcs">ftp.yggdrasil.com</a>
+<li>US (California): <a href="ftp://ftp.yggdrasil.com/mirrors/site/egcs.cygnus.com/pub/egcs/">ftp.yggdrasil.com</a>
 <li>US (Arizona): <a href="ftp://ftp.ninemoons.com/pub/mirrors/egcs/">ftp.ninemoons.com</a>, thanks to <a href="mailto:ktroulos@noc.ntua.gr">Costas Troulos</a>.
 </ul>
 
