sourceware.cygnus.com->sources.redhat.com

--- a/htdocs/java/FAQ.html
+++ b/htdocs/java/FAQ.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<meta http-equiv="refresh" content="2; URL=http://sourceware.cygnus.com/java/faq.html">
+<meta http-equiv="refresh" content="2; URL=http://sources.redhat.com/java/faq.html">
 <title>The GCJ FAQ has moved...</title>
 </head>
 <body>
