--- a/htdocs/java/build-snapshot.html
+++ b/htdocs/java/build-snapshot.html
@@ -31,7 +31,7 @@ They are made about once a week.
 <pre>
 2. Get a Libgcj snapshots from
 
-<a href="ftp://sourceware.cygnus.com/pub/java/snapshot">ftp://sourceware.cygnus.com/pub/java/snapshot</a>
+<a href="ftp://sources.redhat.com/pub/java/snapshot">ftp://sources.redhat.com/pub/java/snapshot</a>
 
 They are made nightly.
 </pre>
