--- a/htdocs/java/contribute.html
+++ b/htdocs/java/contribute.html
@@ -62,7 +62,7 @@
   </ul>
 
     <p>Send patches to <a
-	href="mailto:java-patches@sourceware.cygnus.com">the patch mailing
+	href="mailto:java-patches@sources.redhat.com">the patch mailing
 	list</a>.  This list is <a href="/ml/java-patches/">archived</a>.
 
 <h2>Checkins and Gnats</h2>
