--- a/htdocs/java/download.html
+++ b/htdocs/java/download.html
@@ -20,13 +20,13 @@
 <a href="download.html">Download</a><br>
 <a href="contrib.html">Contributing</a><br>
 <a href="done.html">Done with Gcj</A><br>
-<a href="http://sourceware.cygnus.com/cgi-bin/gnatsweb.pl?user=guest&password=guest&database=java&cmd=login">Bugs</a><br>
+<a href="/cgi-bin/gnatsweb.pl?user=guest&password=guest&database=java&cmd=login">Bugs</a><br>
 <a href="thanks.html">Thanks</a><br>
 <!-- <a href="support.html">Support</a><br> -->
 <br><br><br>
 <a href="http://gcc.gnu.org">GCC</a><br>
-<a href="http://sourceware.cygnus.com/mauve">The Mauve Project</a><br>
-<a href="http://sourceware.cygnus.com">Sourceware</a><br>
+<a href="/mauve">The Mauve Project</a><br>
+<a href="/">Sources.redhat.com</a><br>
 <a href="http://www.gnu.org">The GNU Project</a><br>
 <a href="http://www.redhat.com">Red Hat</a><br>
 </td></tr></table>
@@ -73,8 +73,8 @@ or each of the Core Compiler, C++ and Java distributions.
 
 The most current stable release of libgcj is 2.95.1. Libgcj 2.95.1 is available 
 from
-<a href="ftp://sourceware.cygnus.com/pub/java/libgcj-2.95.1.tar.gz">
-ftp://sourceware.cygnus.com/pub/java/libgcj-2.95.1.tar.gz
+<a href="ftp://sources.redhat.com/pub/java/libgcj-2.95.1.tar.gz">
+ftp://sources.redhat.com/pub/java/libgcj-2.95.1.tar.gz
 </a>
 
 
@@ -98,7 +98,7 @@ Note that the current development sources are generally for
 older, more stable, versions. Also note that the current development
 sources may have bugs which prevent it from compiling or running; 
 however, these things should be fixed immediately. Please
-<a href="http://sourceware.cygnus.com/cgi-bin/gnatsweb.pl?user=guest&password=guest&database=java&cmd=login">submit a problem report</a> if you are
+<a href="/cgi-bin/gnatsweb.pl?user=guest&password=guest&database=java&cmd=login">submit a problem report</a> if you are
 using the development sources and run into such a problem.
 
 <p>
@@ -107,11 +107,11 @@ GCC snapshots are made about once a week.  They are available from
 <a href="http://gcc.gnu.org/snapshots.html">http://gcc.gnu.org/snapshots.html</a>.
 <p>
 Libgcj snapshots are made nightly, and are available from
-<a href="ftp://sourceware.cygnus.com/pub/java/snapshot">ftp://sourceware.cygnus.com/pub/java/snapshot</a>.
+<a href="ftp://sources.redhat.com/pub/java/snapshot">ftp://sources.redhat.com/pub/java/snapshot</a>.
 
 <h3>RPM</h3>
 RPMs are made available occasionally.  The are available from
-<a href="ftp://sourceware.cygnus.com/pub/java/rpm/">ftp://sourceware.cygnus.com/pub/java/rpm/</a>.
+<a href="ftp://sources.redhat.com/pub/java/rpm/">ftp://sources.redhat.com/pub/java/rpm/</a>.
 <p>
 
 <h3>cvs</h3> 
@@ -128,7 +128,7 @@ cvs -z9 -d:pserver:anoncvs@anoncvs.cygnus.com:/cvs/java co libgcj
 <h3>cvsweb</h3>
 
 You can also view the libgcj <a
-href="http://sourceware.cygnus.com/cgi-bin/cvsweb.cgi/libgcj/?cvsroot=java">cvs
+href="/cgi-bin/cvsweb.cgi/libgcj/?cvsroot=java">cvs
 archive</a> and the Java front end <a
 href="http://gcc.gnu.org/cgi-bin/cvsweb.cgi/egcs/gcc/java">cvs
 archive</a> (the entire compiler is also 
@@ -153,7 +153,7 @@ success/failure with GCJ versions other than the stable release.
 
 <p> 
 If you are successfully using a GCJ release other than the stable one,
-please email <a href="mailto:java-discuss@sourceware.cygnus.com">the 
+please email <a href="mailto:java-discuss@sources.redhat.com">the 
 GCJ Discussion mailing list</a> to report it. Thanks!
 
 
@@ -211,7 +211,7 @@ for more details on downloading and using this release.</td>
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: download.html,v 1.9 2000/06/25 23:34:57 bryce Exp $
+$Id: download.html,v 1.10 2000/06/28 04:54:21 apbianco Exp $
 </small>
 </address>
 
