--- a/htdocs/java/faq-portugese.html
+++ b/htdocs/java/faq-portugese.html
@@ -22,20 +22,20 @@
 <tr>
 <td WIDTH="10"></td>
 
-<td><a href="http://sourceware.cygnus.com/java/index.html">Home</a>
-<br><a href="http://sourceware.cygnus.com/java/faq.html">FAQ</a>
-<br><a href="http://sourceware.cygnus.com/java/mail.html">Mailing Lists</a>
-<br><a href="http://sourceware.cygnus.com/java/docs.html">Documentation</a>
-<br><a href="http://sourceware.cygnus.com/java/download.html">Download</a>
-<br><a href="http://sourceware.cygnus.com/java/contrib.html">Contributing</a>
+<td><a href="index.html">Home</a>
+<br><a href="faq.html">FAQ</a>
+<br><a href="mail.html">Mailing Lists</a>
+<br><a href="docs.html">Documentation</a>
+<br><a href="download.html">Download</a>
+<br><a href="contrib.html">Contributing</a>
 <br><a href="done.html">Done with Gcj</A>
-<br><a href="http://sourceware.cygnus.com/cgi-bin/gnatsweb.pl?user=guest&password=guest&database=java&cmd=login">Bugs</a>
-<br><a href="http://sourceware.cygnus.com/java/thanks.html">Thanks</a>
+<br><a href="/cgi-bin/gnatsweb.pl?user=guest&password=guest&database=java&cmd=login">Bugs</a>
+<br><a href="thanks.html">Thanks</a>
 <br><!-- <a href="support.html">Support</a><br> -->
 <br>&nbsp;
 <p><a href="http://gcc.gnu.org">GCC</a>
-<br><a href="http://sourceware.cygnus.com/mauve">The Mauve Project</a>
-<br><a href="http://sourceware.cygnus.com">Sourceware</a>
+<br><a href="/mauve">The Mauve Project</a>
+<br><a href="/">Sources.redhat.com</a>
 <br><a href="http://www.gnu.org">The GNU Project</a>
 <br><a href="http://www.redhat.com">Red Hat</a></td>
 </tr>
@@ -54,7 +54,7 @@
 <h1>
 O FAQ GCJ</h1>
 A &uacute;ltima vers&atilde;o deste documento sempre est&aacute; dispon&iacute;vel
-em <a href="http://sourceware.cygnus.com/java/faq.html">http://sourceware.cygnus.com/java/faq.html</a></p>
+em <a href="http://sources.redhat.com/java/faq-portugese.html">http://sources.redhat.com/java/faq-portugese.html</a></p>
 <p>This FAQ is also available in <a href="faq.html">English</a>.</p>
 <ol>
 <li>
@@ -149,7 +149,7 @@ arquivos .class ou .java?</a></li>
 </ol>
 
 <li>
-<a href="http://sourceware.cygnus.com/java/faq.html#5_0">Quest&otilde;es
+<a href="faq.html#5_0">Quest&otilde;es
 de <i>Runtime</i> (tempo de execu&ccedil;&atilde;o)</a></li>
 
 <ol>
@@ -209,7 +209,7 @@ libgcj &eacute; distribu&iacute;do sob a licen&ccedil;a GPL.</dd>
 
 <dl>
 <dt>
-libgcj tem um&nbsp; <a href="http://sourceware.cygnus.com/cgi-bin/gnatsweb.pl?user=guest&password=guest&database=java&cmd=login">banco
+libgcj tem um&nbsp; <a href="/cgi-bin/gnatsweb.pl?user=guest&password=guest&database=java&cmd=login">banco
 de dados de bugs, Gnats,</a> correspondente que voc&ecirc; pode folhear.
 Voc&ecirc; tamb&eacute;m pode submeter um novo bug a partir da p&aacute;gina
 do Gnats.
@@ -224,7 +224,7 @@ do Gnats.
 Voc&ecirc; pode enviar reparos simples como remendos. Por favor, siga as
 seguintes <a href="http://gcc.gnu.org/contribute.html">Diretrizes GCC
 para submiss&atilde;o de remendos</a>. "For more complex changes, you must
-sign copyright over to the Free Software Foundation." Veja a&nbsp; p&aacute;gina de <a href="http://sourceware.cygnus.com/java/contrib.html">contribui&ccedil;&otilde;es</a>
+sign copyright over to the Free Software Foundation." Veja a&nbsp; p&aacute;gina de <a href="contrib.html">contribui&ccedil;&otilde;es</a>
 para detalhes.
 <hr></dt>
 </dl>
@@ -261,7 +261,7 @@ Poderia ser uma boa id&eacute;ia para um volunt&aacute;rio.</dd>
 <a href="ftp://ftp.gnu.org/pub/gnu/gdb/gdb-4.18.tar.gz">gdb 4.18</a> inclui
 suporte para depura&ccedil;&atilde;o de programas Java compilados com gcj.&nbsp;
 Para Linux, voc&ecirc; precisar&aacute; usar uma vers&atilde;o recente
-do gdb&nbsp; <a href="ftp://sourceware.cygnus.com/pub/gdb/snapshots/">ftp://sourceware.cygnus.com/pub/gdb/snapshots/</a>
+do gdb&nbsp; <a href="ftp://sources.redhat.com/pub/gdb/snapshots/">ftp://sources.redhat.com/pub/gdb/snapshots/</a>
 porque o padr&atilde;o&nbsp; 4.18 n&atilde;o tem suporte para linhas de
 execu&ccedil;&atilde;o (<i>threads)&nbsp;</i> Linux.</dd>
 
@@ -617,7 +617,7 @@ fonte, mas podem ser usadas na compila&ccedil;&atilde;o de bytecodes. Veja
 lan&ccedil;amento;&nbsp; Como devo construir?</h3>
 
 <dd>
-Por favor, leia <a href="http://sourceware.cygnus.com/java/build-snapshot.html">aqui</a>.&nbsp;</dd>
+Por favor, leia <a href="http://sources.redhat.com/java/build-snapshot.html">aqui</a>.&nbsp;</dd>
 
 <br>&nbsp;
 <p>&nbsp;
@@ -642,7 +642,7 @@ collect2: ld returned 1 exit status
 
 <dl>Um contorno conhecido para este e outros problemas de v&iacute;nculo
 relatados nos v&aacute;rios lan&ccedil;amentos do Solaris &eacute; construir
-gcc/gcj com o <a href="ftp://sourceware.cygnus.com/pub/binutils/snapshots">mais
+gcc/gcj com o <a href="ftp://sources.redhat.com/pub/binutils/snapshots">mais
 recente GNU binutils</a> ao inv&eacute;s do <tt>ld </tt>nativodo Solaris
 . A maneria mais direta de fazer isso &eacute; construir e instalar&nbsp;
 binutils, e ent&atilde;o referenci&aacute;-lo no&nbsp; configure para&nbsp;
@@ -971,14 +971,14 @@ ser incompat&iacute;veis com o material gmon.</dd>
 <h3>
 <a NAME="6_1"></a>6.1 H&aacute; exemplos de como usar CNI?</h3>
 
-<blockquote>Glenn Chambers criou alguns exemplos triviais <a href="http://sourceware.cygnus.com/java/cni-1.txt">aqui</a>
-e <a href="http://sourceware.cygnus.com/java/cni-2.txt">aqui</a>. Para
-efeito de&nbsp; compara&ccedil;&atilde;o, <a href="http://sourceware.cygnus.com/java/jni-kaffe.txt">aqui</a>
+<blockquote>Glenn Chambers criou alguns exemplos triviais <a href="cni-1.txt">aqui</a>
+e <a href="cni-2.txt">aqui</a>. Para
+efeito de&nbsp; compara&ccedil;&atilde;o, <a href="jni-kaffe.txt">aqui</a>
 est&aacute; o mesmo exemplo como uma aplica&ccedil;&atilde;o JNI.
 <p>Note que voc&ecirc; deve compilar os arquivos C++ usados pelo CNI com
 a op&ccedil;&atilde;o -fno-rtti.&nbsp;
 <p>A fonte de informa&ccedil;&atilde;o prim&aacute;ria sobre CNI est&aacute;
-em <a href="http://sourceware.cygnus.com/java/papers/cni/t1.html">http://sourceware.cygnus.com/java/papers/cni/t1.html</a></blockquote>
+em <a href="papers/cni/t1.html">http://sources.redhat.com/java/papers/cni/t1.html</a></blockquote>
 </td>
 </tr>
 
@@ -995,7 +995,7 @@ em <a href="http://sourceware.cygnus.com/java/papers/cni/t1.html">http://sourcew
 
 <hr>
 <address>
-<a href="http://sourceware.cygnus.com/java/about.html">The GCJ team</a></address>
+<a href="about.html">The GCJ team</a></address>
 
 <br><font size=-1>$Id: faq.html,v 1.11 2000/02/09 01:03:58 apbianco Exp
 $</font>
