--- a/htdocs/java/libgcj.html
+++ b/htdocs/java/libgcj.html
@@ -1,14 +1,14 @@
 <html>
 <head>
-<meta http-equiv="Refresh" content="6; URL=http://sourceware.cygnus.com/java/">
+<meta http-equiv="Refresh" content="6; URL=http://sources.redhat.com/java/">
 <title>The GCJ page has moved...</title>
 </head>
 <body>
-This page has moved to <a href="http://sourceware.cygnus.com/java/">http://sourceware.cygnus.com/java</a>.
+This page has moved to <a href="/java/">http://sources.redhat.com/java</a>.
 <p>
 You should be taken to the new location automatically.
 <p>
-If not, click <a href="http://sourceware.cygnus.com/java/">here</a>.
+If not, click <a href="/java/">here</a>.
 <p>
 Remember to update your links!
 </body>
