--- a/htdocs/java/mail.html
+++ b/htdocs/java/mail.html
@@ -20,13 +20,13 @@
 <a href="download.html">Download</a><br>
 <a href="contrib.html">Contributing</a><br>
 <a href="done.html">Done with Gcj</A><br>
-<a href="http://sourceware.cygnus.com/cgi-bin/gnatsweb.pl?user=guest&password=guest&database=java&cmd=login">Bugs</a><br>
+<a href="http://sources.redhat.com/cgi-bin/gnatsweb.pl?user=guest&password=guest&database=java&cmd=login">Bugs</a><br>
 <a href="thanks.html">Thanks</a><br>
 <!-- <a href="support.html">Support</a><br> -->
 <br><br><br>
 <a href="http://gcc.gnu.org">GCC</a><br>
-<a href="http://sourceware.cygnus.com/mauve">The Mauve Project</a><br>
-<a href="http://sourceware.cygnus.com">Sourceware</a><br>
+<a href="/mauve">The Mauve Project</a><br>
+<a href="/">Sources.redhat.com</a><br>
 <a href="http://www.gnu.org">The GNU Project</a><br>
 <a href="http://www.redhat.com">Red Hat</a><br>
 </td></tr></table>
@@ -85,8 +85,8 @@ below to view the archives.
 <p>
 
 The archives are also available for downloading from 
-<a href="ftp://sourceware.cygnus.com/pub/java/mail-archives/">
-ftp://sourceware.cygnus.com/pub/java/mail-archives/</a>.
+<a href="ftp://sources.redhat.com/pub/java/mail-archives/">
+ftp://sources.redhat.com/pub/java/mail-archives/</a>.
 
 <p>
 
@@ -133,7 +133,7 @@ of these lists:
 </blockquote>
 
 <p>If you have any questions about the mailing lists on this site,
-see our <a href="/ml/#faqs">Sourceware mailing list FAQs</a>.
+see our <a href="/ml/#faqs">mailing list FAQs</a>.
 
 </td></tr>
 </table>
@@ -144,7 +144,7 @@ see our <a href="/ml/#faqs">Sourceware mailing list FAQs</a>.
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: mail.html,v 1.5 2000/04/23 05:00:31 green Exp $
+$Id: mail.html,v 1.6 2000/06/28 04:54:21 apbianco Exp $
 </small>
 </address>
 
