--- a/htdocs/java/old-news.html
+++ b/htdocs/java/old-news.html
@@ -97,7 +97,7 @@ bug fixes and more minor enhancements.
 <tr><td valign="top">
 <b>August 26, 1999</b>
 </td><td>
-<a href="http://sourceware.cygnus.com/ml/java-announce/1999/msg00005.html">Libgcj 2.95.1 is released</a>!  This version corresponds to the GCC 2.95.1 release.
+<a href="/ml/java-announce/1999/msg00005.html">Libgcj 2.95.1 is released</a>!  This version corresponds to the GCC 2.95.1 release.
 </td></tr>
 </table>
 
