--- a/htdocs/java/projects.html
+++ b/htdocs/java/projects.html
@@ -22,14 +22,14 @@
                   <a href="download.html">Download</a><br>
                   <a href="contrib.html">Contributing</a><br>
 		  <a href="done.html">Done with Gcj</A><br>
-                  <a href="http://sourceware.cygnus.com/cgi-bin/gnatsweb.pl?user=guest&password=guest&database=java&cmd=login">Bugs</a><br>
+                  <a href="/cgi-bin/gnatsweb.pl?user=guest&password=guest&database=java&cmd=login">Bugs</a><br>
                   <a href="thanks.html">Thanks</a><br>
                   <!-- <a href="support.html">Support</a><br> --> <br>
                   <br>
                   <br>
                   <a href="http://gcc.gnu.org">GCC</a><br>
-                  <a href="http://sourceware.cygnus.com/mauve">The Mauve Project</a><br>
-                  <a href="http://sourceware.cygnus.com">Sourceware</a><br>
+                  <a href="/mauve">The Mauve Project</a><br>
+                  <a href="/">Sources.redhat.com</a><br>
                   <a href="http://www.gnu.org">The GNU Project</a><br>
                   <a href="http://www.redhat.com">Red Hat</a><br>
                 </td>
@@ -49,10 +49,10 @@ What follows is a list of projects that the GCJ community would love
 to see someone pick up and run with.  If you're interested in any of
 these, be sure to send a note with your questions, ideas or intentions
 to the <a
-href="mailto:java-discuss@sourceware.cygnus.com">java-discuss</a>
+href="mailto:java-discuss@sources.redhat.com">java-discuss</a>
 mailing list.  Similarly, if you would like to see a project listed
 here that isn't, send a patch for this HTML file to the <a
-href="mailto:java-patches@sourceware.cygus.com">java-patches</a> list.
+href="mailto:java-patches@sources.redhat.com">java-patches</a> list.
 
 <p>
 
@@ -297,7 +297,7 @@ Runtime improvements
             application.  On Windows, it might make sense to do this
             using the standard resource mechanism.  This has been
             <a
-            href="http://sourceware.cygnus.com/ml/java-discuss/1999-q3/msg00318.html">discussed</a>
+            href="http://sources.redhat.com/ml/java-discuss/1999-q3/msg00318.html">discussed</a>
             on the mailing list a bit.
 	  </ul>
 <p>
@@ -311,7 +311,7 @@ Runtime improvements
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: projects.html,v 1.10 2000/05/02 20:36:16 tromey Exp $
+$Id: projects.html,v 1.11 2000/06/28 04:54:21 apbianco Exp $
 </small>
 </address>
 
