--- a/htdocs/java/thanks.html
+++ b/htdocs/java/thanks.html
@@ -20,13 +20,13 @@
 <a href="download.html">Download</a><br>
 <a href="contrib.html">Contributing</a><br>
 <a href="done.html">Done with Gcj</A><br>
-<a href="http://sourceware.cygnus.com/cgi-bin/gnatsweb.pl?user=guest&password=guest&database=java&cmd=login">Bugs</a><br>
+<a href="/cgi-bin/gnatsweb.pl?user=guest&password=guest&database=java&cmd=login">Bugs</a><br>
 <a href="thanks.html">Thanks</a><br>
 <!-- <a href="support.html">Support</a><br> -->
 <br><br><br>
 <a href="http://gcc.gnu.org">GCC</a><br>
-<a href="http://sourceware.cygnus.com/mauve">The Mauve Project</a><br>
-<a href="http://sourceware.cygnus.com">Sourceware</a><br>
+<a href="/mauve">The Mauve Project</a><br>
+<a href="/">Sources.redhat.com</a><br>
 <a href="http://www.gnu.org">The GNU Project</a><br>
 <a href="http://www.redhat.com">Red Hat</a><br>
 </td></tr></table>
@@ -82,12 +82,12 @@ great compiler work.
 <li>Andrew Haley for his amazing compiler and library efforts.
 <li>Bryce McKinlay for numerous libgcj fixes and improvements.
 <li>Jason Molenda for maintaining the project infrastructure on
-<a href="http://sourceware.cygnus.com">sourceware.cygnus.com</a>.
+<a href="http://sources.redhat.com">sources.redhat.com</a>.
 <li>Mike Moreton for his various patches.
 <li>Alexandre Oliva for all of this porting and testing efforts.
 <li>Kresten Krab Thorup for his fantastic bytecode interpreter.
 <li>Warren Levy for his tremendous library work.
-<li>All of the Mauve project <a href="http://sourceware.cygnus.com/cgi-bin/cvsweb.cgi/~checkout~/mauve/THANKS?rev=1.2&cvsroot=mauve&only_with_tag=HEAD">contributors</a>, for test code.
+<li>All of the Mauve project <a href="/cgi-bin/cvsweb.cgi/~checkout~/mauve/THANKS?rev=1.2&cvsroot=mauve&only_with_tag=HEAD">contributors</a>, for test code.
 <li>Rainer Orth for configuration clean-ups and porting help.
 <li>Alexandre Petit-Bianco for implementing much of the compiler, and continued maintainership.
 <li>Bradley Schatz for his work on the FAQ.
@@ -147,7 +147,7 @@ Thank you all!
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: thanks.html,v 1.9 2000/04/23 05:00:31 green Exp $
+$Id: thanks.html,v 1.10 2000/06/28 04:54:21 apbianco Exp $
 </small>
 </address>
 
