--- a/htdocs/java/about.html
+++ b/htdocs/java/about.html
@@ -20,14 +20,14 @@
 <a href="download.html">Download</a><br>
 <a href="contrib.html">Contributing</a><br>
 <a href="done.html">Done with Gcj</A><br>
-<a href="http://sourceware.cygnus.com/cgi-bin/gnatsweb.pl?user=guest&password=guest&database=java&cmd=login">Bugs</a><br>
+<a href="/cgi-bin/gnatsweb.pl?user=guest&password=guest&database=java&cmd=login">Bugs</a><br>
 <a href="thanks.html">Thanks</a><br>
 <!-- <a href="support.html">Support</a><br> -->
 <br><br><br>
 <a href="http://gcc.gnu.org">GCC</a><br>
-<a href="http://sourceware.cygnus.com/mauve">The Mauve Project</a><br>
-<a href="http://sourceware.cygnus.com">Sourceware</a><br>
-<a href="http://www.gnu.org">The GNU Project</a><br>
+<a href="/mauve">The Mauve Project</a><br>
+<a href="/">Sources.redhat.com</a><br>
+<a href="http://www.gnu.org/">The GNU Project</a><br>
 <a href="http://www.redhat.com">Red Hat</a><br>
 </td></tr></table>
 </td></tr></table>
@@ -71,7 +71,7 @@ file</a> for web page changes.  Please help keep this up to date.
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: about.html,v 1.3 2000/04/23 05:00:31 green Exp $
+$Id: about.html,v 1.4 2000/06/28 04:54:21 apbianco Exp $
 </small>
 </address>
 
