--- a/htdocs/java/done.html
+++ b/htdocs/java/done.html
@@ -23,14 +23,14 @@
                   <a href="download.html">Download</a><br>
                   <a href="contrib.html">Contributing</a><br>
 		  <a href="done.html">Done with Gcj</A><br>
-                  <a href="http://sourceware.cygnus.com/cgi-bin/gnatsweb.pl?user=guest&password=guest&database=java&cmd=login">Bugs</a><br>
+                  <a href="/cgi-bin/gnatsweb.pl?user=guest&password=guest&database=java&cmd=login">Bugs</a><br>
                   <a href="thanks.html">Thanks</a><br>
                   <!-- <a href="support.html">Support</a><br> --> <br>
                   <br>
                   <br>
                   <a href="http://gcc.gnu.org">GCC</a><br>
-                  <a href="http://sourceware.cygnus.com/mauve">The Mauve Project</a><br>
-                  <a href="http://sourceware.cygnus.com">Sourceware</a><br>
+                  <a href="/mauve">The Mauve Project</a><br>
+                  <a href="/">Sources.redhat.com</a><br>
                   <a href="http://www.gnu.org">The GNU Project</a><br>
                   <a href="http://www.redhat.com">Red Hat</a><br>
                 </td>
@@ -50,7 +50,7 @@
       that are using the GCJ runtime and compiler. If you would like
       your project to be listed here or know about a particular
       project, please write to the <A
-      HREF="mailto:java-discuss@sourceware.cygnus.com">list</A>.
+      HREF="mailto:java-discuss@sources.redhat.com">list</A>.
       <p>
       Entries are listed in alphabetical order.
 
@@ -71,7 +71,7 @@
 	</td>
 
 	<td>The <A HREF="http://www.mmsi.com/modular/trucks/index.html">
-	    Autonomous Truck Page</A>. <A HREF="http://sourceware.cygnus.com/ml/java-discuss/2000-06/msg00086.html">Entry</A> submitted by 
+	    Autonomous Truck Page</A>. <A HREF="/ml/java-discuss/2000-06/msg00086.html">Entry</A> submitted by 
 	    <A HREF="mailto:olson@mmsi.com">Jon Olson</A>.
 	</td>
       </tr>       
@@ -92,7 +92,7 @@
 	    performance gains over Kaffe's jit3 were witnessed.
 	 </td>
 	 <td><A HREF="http://www.swarm.org">Swarm</A>. 
-	     <A HREF="http://sourceware.cygnus.com/ml/java-discuss/2000-06/msg00084.html">Entry</A> 
+	     <A HREF="/ml/java-discuss/2000-06/msg00084.html">Entry</A> 
 	     submitted by <A HREF="mailto:mgd@swarm.org">Marcus G. Daniel</A>.
 	 </td>
       </tr>
@@ -103,7 +103,7 @@
 </table>
 <hr>
 <address> <a href="about.html">The GCJ team</a> <br>
-<small> $Id: done.html,v 1.2 2000/06/28 23:33:16 apbianco Exp $ </small></address>
+<small> $Id: done.html,v 1.3 2000/06/29 02:43:43 apbianco Exp $ </small></address>
 <h2 align=center>&nbsp;</h2>
 
     <!--#include virtual="/include/footer-subpages.html"-->
