--- a/htdocs/java/libgcj-platforms.html
+++ b/htdocs/java/libgcj-platforms.html
@@ -16,22 +16,22 @@ following chart for platforms that have already been covered if you have
 a choice of platforms to build upon.
 
 <p>Please send build/test results (in the format described below) to
-<a href="mailto:java-discuss@sourceware.cygnus.com">java-discuss@sourceware.cygnus.com</a>.
+<a href="mailto:java-discuss@sources.redhat.com">java-discuss@sources.redhat.com</a>.
 <br>You may also address questions to 
-<a href="mailto:java-discuss@sourceware.cygnus.com">java-discuss</a>
+<a href="mailto:java-discuss@sources.redhat.com">java-discuss</a>
 or to indicate that you would like to help in another way with some phase of the
 libgcj-2.95 release cycle.
 
 <h2>How to run the tests</h2>
 
 <p>  First, you must have built and installed
-<a href="http://sourceware.cygnus.com/java/libgcj.html">libgcj</a> using the
+<a href="libgcj.html">libgcj</a> using the
 <b>libgcj-2_95-branch</b> branch of the source.
 <p>This can be done by including the <tt>'-rlibgcj-2_95-branch'</tt>
 flag on the <tt>'cvs co'</tt> command line or downloading the
-<a href="ftp://sourceware.cygnus.com/pub/java/snapshots/">snapshot</a>
+<a href="ftp://sources.redhat.com/pub/java/snapshots/">snapshot</a>
 and then following the
-<a href="http://sourceware.cygnus.com/java/libgcj.html">
+<a href="libgcj.html">
 build instructions on the libgcj page</a>.
 (For those developers downloading via snapshots, please note that
 the snapshoting process has been temporarily changed to use the
@@ -44,10 +44,10 @@ tree and run <tt>'make check'</tt> after doing the following:
 <ul>
   <li>In order to more fully exercise libgcj, it is highly recommended to
   include the 
-  <a href="http://sourceware.cygnus.com/mauve/">Mauve testsuite</a>
+  <a href="/mauve/">Mauve testsuite</a>
   in the test run.
   <br>The Mauve tests are available for
-  <a href="http://sourceware.cygnus.com/mauve/download.html">download</a>
+  <a href="/mauve/download.html">download</a>
   via both anonymous cvs and snapshots.
   <li>The env variable MAUVEDIR must be set to the top of the Mauve source tree
   <li>The testsuites rely on the dejagnu package.  You can download the
@@ -182,7 +182,7 @@ OK
 </table>
 
 <p>A list of deviations from the 
-<a href="http://sourceware.cygnus.com/java/libgcj-sum.txt">posted baseline list of test results</a>
+<a href="libgcj-sum.txt">posted baseline list of test results</a>
 should follow any entry you submit.
 A context diff is fine if it is clear what tests are failing;
 we'd rather not have to deal with a complete output listing unless
@@ -191,7 +191,7 @@ it is necessary to comprehend the deviations.
 successfully, so differences should be expected.
  
 <p>Please send build/test results to
-<a href="mailto:java-discuss@sourceware.cygnus.com">java-discuss@sourceware.cygnus.com</a>
+<a href="mailto:java-discuss@sources.redhat.com">java-discuss@sources.redhat.com</a>
 in this format.
 
 <h2>Submitting Patches</h2>
@@ -203,7 +203,7 @@ by case basis.  All other changes will only go into the main trunk
 and not the libgcj-2_95-branch.
 
 <p>The mailing list, 
-<a href="mailto:java-patches@sourceware.cygnus.com">java-patches@sourceware.cygnus.com</a>
+<a href="mailto:java-patches@sources.redhat.com">java-patches@sources.redhat.com</a>
 has been created for patch submissions.
 We plan to use this list just as egcs uses the egcs-patches list: all
 patches will be sent to the list.
@@ -217,13 +217,13 @@ list; this can happen concurrently with the checkin.
 
 <p>Some discussion will probably take place on this list (just as with
 egcs-patches).  The 
-<a href="http://sourceware.cygnus.com/java/">web page has subscription info</a>,
+<a href="/java/">web page has subscription info</a>,
 as well as a
-<a href="http://sourceware.cygnus.com/ml/java-patches/">
+<a href="/ml/java-patches/">
 link to the archives</a>.
 
 <p>The
-<a href="mailto:java-patches@sourceware.cygnus.com">java-patches</a>
+<a href="mailto:java-patches@sources.redhat.com">java-patches</a>
 mailing list is for patches to the libgcj code
 (libjava, boehm-gc, zlib, etc) code only.
 In particular, compiler patches still have to go through egcs, so
