--- a/htdocs/java/libgcj2.html
+++ b/htdocs/java/libgcj2.html
@@ -39,7 +39,7 @@
     </pre>
 
     <p>For those without cvs access, you can find libgcj snapshots
-    in <a href="ftp://sourceware.cygnus.com/pub/java/snapshots/">ftp://sourceware.cygnus.com/pub/java/snapshots/</a>.
+    in <a href="ftp://sources.redhat.com/pub/java/snapshots/">ftp://sources.redhat.com/pub/java/snapshots/</a>.
 
     <p>You can also <a href="/cgi-bin/cvsweb.cgi/libgcj/?cvsroot=java">
 	view the cvs archive</a> via cvsweb.
