Fix several minor markup bugs.

--- a/htdocs/gcc-3.0/criteria.html
+++ b/htdocs/gcc-3.0/criteria.html
@@ -132,23 +132,24 @@ answering questions and reviewing patches as time permits.</p>
 
 <p>There are GCC front-ends for many different languages.  However, in
 this release, only the behavior of front-ends for the following
-languages will be considered part of the release criteria:
+languages will be considered part of the release criteria:</p>
 <ul>
 <li>C
 <li>C++
 <li>Fortran
 <li>Java
 </ul>
-</p>
 
 <p>The following languages will be supported by the release, but their
 behavior will not be a primary consideration in determining whether or
-not to ship a particular release candidate:
+not to ship a particular release candidate:</p>
+
 <ul>
 <li>Chill
 <li>Objective-C
 </ul>
-In particular, no application testing, code quality, or compile-time
+
+<p>In particular, no application testing, code quality, or compile-time
 performance testing will be required for these languages.  However,
 the regression testing criteria documented below will apply to these
 languages, except Chill, for which no regression tests are
@@ -251,7 +252,9 @@ previous releases.  Therefore, we will use the following benchmarks
 for measuring code quality:</p>
 
 <table align="center">
-<tr><th align=left>Name<th align=left>Language<th align=left>Source URL</ht>
+<tr><th align=left>Name
+    <th align=left>Language
+    <th align=left>Source URL
 <tr><td>gzip<td>C
     <td><a href="ftp://ftp.gnu.org/gnu/gzip/gzip-1.2.4a.tar.gz">
         gzip-1.2.4a.tar.gz</a>
@@ -268,12 +271,12 @@ little precedent for the behavior of the Java compiler.  For Java,
 functional completeness and correctness are still more important than
 optimization.</p>
 
-<a>In addition to the above benchmarks, the behavior of real programs
+<p>In addition to the above benchmarks, the behavior of real programs
 should be considered as well.  For that reason, the behavior of the
 elliptic curve integer factorization program <a
 href="ftp://ftp.loria.fr/pub/loria/eureca/tmp/GMP-ECM/ecm4c.c">ecm4c.c</a>,
 which uses GNU mp, will be considered part of the release
-criteria.</a>
+criteria.</p>
 
 <p>A release candidate will be deemed unacceptable if the performance
 of the generated code is not at least as good as that of GCC 2.95.2 on
@@ -291,7 +294,7 @@ additional optimizations and additional features will have a non-zero
 cost.</p>
 
 <p>In order to measure compile-time performance, we will use the
-following unit tests:
+following unit tests:</p>
 <table>
 <tr><th align=left>Name
     <th align=left>Language
@@ -307,7 +310,6 @@ following unit tests:
 <tr><td><td>Fortran
 <tr><td><td>Java
 </table>
-</p>
 
 <p>In addition to these unit tests, we will measure the time and peak
 memory usage used when building the entire GNU Emacs distribution with
@@ -319,7 +321,8 @@ more than 25%, that candidate will be deemed unacceptable.</p>
 
 <h2>Open Issues</h2>
 
-The following issues are as of yet unresolved:
+<p>The following issues are as of yet unresolved:</p>
+
 <ul>
 <li>What integration tests should be used for Fortran and Java?
 <li>What versions of HPUX and AIX should we use as primary platforms?
